--- a/package.json
+++ b/package.json
@@ -10,12 +10,30 @@
   },
   "dependencies": {
     "expo": "~47.0.12",
+    "expo-image-picker": "^14.0.2",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-animatable": "^1.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-native-picker/picker": "^2.4.0",
+    "@react-navigation/stack": "^6.2.1",
+    "axios": "^0.27.2",
+    "expo": "^45.0.0",
+    "expo-notifications": "~0.15.4",
+    "expo-permissions": "~13.2.0",
+    "expo-status-bar": "~1.3.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-web": "0.17.7",
+    "react-navigation": "^4.4.4"
   },
   "private": true
 }
