--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/stack": "^6.2.1",
+    "@types/react": "^18.0.26",
+    "@types/react-native": "^0.71.0",
     "axios": "^0.27.2",
     "expo": "^45.0.0",
     "expo-notifications": "~0.15.4",
