--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-animatable": "^1.3.3"
+    "react-native-animatable": "^1.3.3",
+    "react-native-image-picker": "^5.0.1"
   },
   "devDependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
